fix(ci): add test and build steps to PR workflow, allow patch updates
- Add `npm test --workspaces -- --run` step to run-tests.yml so tests
  actually run during PR checks
- Add `npm run build --workspaces --if-present` step to verify builds
- Fix dependabot.yml to only ignore semver-major updates, allowing
  patch updates through for security fixes

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,4 +22,4 @@ updates:
       day: "thursday"
     ignore:
       - dependency-name: "*"
-        update-types: ["version-update:semver-major" , "version-update:semver-patch"]
+        update-types: ["version-update:semver-major"]
