--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,6 +21,12 @@ jobs:
         run: npm install
         working-directory: .
 
+      - name: Run tests
+        run: npm test --workspaces -- --run
+
+      - name: Build packages
+        run: npm run build --workspaces --if-present
+
   lighthouse:
     name: Lighthouse CI
     runs-on: ubuntu-latest
